--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/portfolio-favicon.jpg" />
+    <link rel="icon" type="image/png" href="/mo-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Michael Orzel</title>
   </head>
